# yew_styles_trunk_template

./: Cargo.toml  LICENSE.md  README.md  Trunk.toml  index.html
.github/: FUNDING.yml
src/: app.rs  main.rs
src/pages/: home.rs
src/styles/: yew-styles.css
